--- a/client/webfiles/advertisement.html
+++ b/client/webfiles/advertisement.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Angebote</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
     <style>
 
         body,
@@ -18,7 +21,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Verdana, sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-size: 150%;
             background-color: #f0f0f0;
             text-align: center;
