--- a/client/webfiles/splash-news.html
+++ b/client/webfiles/splash-news.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Monitor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
     <style>
 
         body {
             background-color: black;
             color: white;
             user-select: none;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: 'Open Sans', sans-serif;
         }
 
         .centeredcontainer {
