--- a/server/data/login.html
+++ b/server/data/login.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Panel - Login</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
     <style>
 
         body {
             background-color: rgb(36, 36, 36);
             color: white;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: 'Open Sans', sans-serif;
         }
 
         .window {
@@ -72,7 +75,7 @@
         </div>
 
     <div class="footer">
-        <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
+        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype und Felixmax_ 2024</a>
     </div>
 
     <script>
