--- a/server/data/offers.html
+++ b/server/data/offers.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Angebote</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
     <style>
-
         body,
         html {
             height: 100%;
@@ -18,9 +20,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 150%;
+            font-family: 'Open Sans', sans-serif;
+            user-select: none;
             background-color: #f0f0f0;
+            font-size: 150%;
             text-align: center;
             flex-direction: column;
             position: relative;
