wip settings page, name change to CafDS

--- a/server/data/editentry.html
+++ b/server/data/editentry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Panel - Angebote bearbeiten</title>
+    <title>CafDS Dashboard - Angebote bearbeiten</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        Cafeteria Panel
+        CafDS Dashboard
         <button id="logoutBtn">Ausloggen</button>
     </div>
     <div class="navbar" id="navbar">
@@ -22,10 +22,19 @@
             <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
+            <a href="/panel/menu">Menü bearbeiten</a>
+        </div>
+        <div class="navbar-item">
+            <a href="/panel/menuentries">Menüeinträge bearbeiten</a>
+        </div>
+        <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/media">Media verwalten</a>
+            <a href="/panel/media">Medien verwalten</a>
+        </div>
+        <div class="navbar-item">
+            <a href="/panel/settings">Einstellungen</a>
         </div>
     </div>
     <div class="content" style="width: 100%;">
