--- a/server/data/login.html
+++ b/server/data/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Panel - Login</title>
+    <title>CafDS Dashboard - Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
@@ -65,7 +65,7 @@
     <div class="window">
 
         <div class="header">
-            Cafeteria Panel
+            CafDS Dashboard
         </div>
 
         <div class="content">
