--- a/server/data/uploadmedia.html
+++ b/server/data/uploadmedia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Panel</title>
+    <title>CafDS Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        Cafeteria Panel
+        CafDS Dashboard
         <button id="logoutBtn">Ausloggen</button>
     </div>
     <div class="navbar" id="navbar">
@@ -22,10 +22,19 @@
             <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
+            <a href="/panel/menu">Menü bearbeiten</a>
+        </div>
+        <div class="navbar-item">
+            <a href="/panel/menuentries">Menüeinträge bearbeiten</a>
+        </div>
+        <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
         <div class="navbar-item-selected">
-            <a href="/panel/media">Media verwalten</a>
+            <a href="/panel/media">Medien verwalten</a>
+        </div>
+        <div class="navbar-item">
+            <a href="/panel/settings">Einstellungen</a>
         </div>
     </div>
     <div class="content">
@@ -34,8 +43,8 @@
             <div id="uploadingtextb" >Datei wählen</div>
         <input class="imageselector" id="selectors" type="file" accept="image/png, image/jpeg">
         </label>
-        <p>Maximum: 3MB</p>
-        <p>Benennen sie die Datei vor dem Upload um, um die Übersicht zu behalten. Das spätere Umbenennen ist nicht möglich.</p>
+        <p>Maximum: 3MiB</p>
+        <p>Benennen Sie die Datei vor dem Upload um, um die Übersicht zu behalten. Das spätere Umbenennen ist nicht möglich.</p>
     </div>
     <div class="footer">
         <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype & Felixmax_ 2024</a>
