--- a/server/data/panel.html
+++ b/server/data/panel.html
@@ -25,7 +25,7 @@
             <a href="/panel/menu">Menü bearbeiten</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menuentries">Menüeinträge bearbeiten</a>
+            <a href="/panel/menuentries">Menüeinträge verwalten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
