--- a/server/data/offersedit.html
+++ b/server/data/offersedit.html
@@ -248,7 +248,7 @@
 
         function deleteEntry(id) {
             if (confirm("Möchten Sie diesen Eintrag wirklich löschen?")) {
-                fetch(`/api/deleteentry`, {
+                fetch(`/api/deleteoffer`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
