--- a/server/data/media.html
+++ b/server/data/media.html
@@ -22,7 +22,7 @@
             <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menu">Menü bearbeiten</a>
+            <a href="/panel/menu">Speiseplan verwalten/bearbeitenalten/bearbeitenalten/bearbeitenalten/bearbeiten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/menuentries">Menüeinträge verwalten</a>
