--- a/server/data/newmenuentry.html
+++ b/server/data/newmenuentry.html
@@ -22,7 +22,7 @@
             <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menu">Menü bearbeiten</a>
+            <a href="/panel/menu">Speiseplan verwalten/bearbeiten</a>
         </div>
         <div class="navbar-item-selected">
             <a href="/panel/menuentries">Menüeinträge verwalten</a>
